--- a/xpi/content/css/padlock_extra.css
+++ b/xpi/content/css/padlock_extra.css
@@ -1,22 +1,15 @@
 @namespace url(http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul);
 @-moz-document url(chrome://browser/content/browser.xul) {
 
-	#identity-popup.chromeUI,
-	#identity-popup.mixedActiveContent,
-	#identity-popup.mixedDisplayContent,
-	#identity-popup.mixedDisplayContentLoadedActiveBlocked {
+	#identity-popup.chromeUI{
 	  -moz-margin-start:-29.5px !important;
 	}
 
-	/* provides the padlock icon for secure connections */
-	#urlbar .chromeUI #page-proxy-favicon[pageproxystate="valid"][src],
-	#urlbar .mixedActiveContent #page-proxy-favicon[pageproxystate="valid"][src],
-	#urlbar .mixedDisplayContent #page-proxy-favicon[pageproxystate="valid"][src],
-	#urlbar .mixedDisplayContentLoadedActiveBlocked #page-proxy-favicon[pageproxystate="valid"][src] {
+	#urlbar .chromeUI #page-proxy-favicon[pageproxystate="valid"][src] {
 	  width: 34px !important;
 	  -moz-padding-start: 18px !important;
 	}
-	
+
 	#main-window:not([fx42plus="true"]) #urlbar .chromeUI #page-proxy-favicon[pageproxystate="valid"][src] {
 	  background: -moz-image-rect(url("chrome://branding/content/identity-icons-brand.png"),
 					0, 16, 16, 0) no-repeat center left !important;
@@ -52,114 +45,6 @@
 	  background: -moz-image-rect(url("chrome://branding/content/identity-icons-brand.png"),
 					0, 48, 16, 32) no-repeat center right !important;
 	}
-	
-	#main-window:not([fx42plus="true"]) #urlbar .mixedActiveContent #page-proxy-favicon[pageproxystate="valid"][src] {
-	  background: -moz-image-rect(url("chrome://classic_theme_restorer/content/images/identity-icons-https-mixed-active.png"),
-					0, 16, 16, 0) no-repeat center left !important;
-	}
-	#main-window:not([fx42plus="true"]) #urlbar:-moz-locale-dir(rtl) .mixedActiveContent #page-proxy-favicon[pageproxystate="valid"][src] {
-	  background: -moz-image-rect(url("chrome://classic_theme_restorer/content/images/identity-icons-https-mixed-active.png"),
-					0, 16, 16, 0) no-repeat center right !important;
-	}
-
-	#main-window:not([fx42plus="true"]) #urlbar .mixedActiveContent #page-proxy-favicon[pageproxystate="valid"][src]:hover {
-	  background: -moz-image-rect(url("chrome://classic_theme_restorer/content/images/identity-icons-https-mixed-active.png"),
-					0, 32, 16, 16) no-repeat center left !important;
-	}
-	#main-window:not([fx42plus="true"]) #urlbar:-moz-locale-dir(rtl) .mixedActiveContent #page-proxy-favicon[pageproxystate="valid"][src]:hover {
-	  background: -moz-image-rect(url("chrome://classic_theme_restorer/content/images/identity-icons-https-mixed-active.png"),
-					0, 32, 16, 16) no-repeat center right !important;
-	}
-
-	#main-window:not([fx42plus="true"]) #urlbar .mixedActiveContent #page-proxy-favicon[pageproxystate="valid"][src]:hover:active {
-	  background: -moz-image-rect(url("chrome://classic_theme_restorer/content/images/identity-icons-https-mixed-active.png"),
-					0, 48, 16, 32) no-repeat center left !important;
-	}
-	#main-window:not([fx42plus="true"]) #urlbar:-moz-locale-dir(rtl) .mixedActiveContent #page-proxy-favicon[pageproxystate="valid"][src]:hover:active {
-	  background: -moz-image-rect(url("chrome://classic_theme_restorer/content/images/identity-icons-https-mixed-active.png"),
-					0, 48, 16, 32) no-repeat center right !important;
-	}
-
-	#main-window:not([fx42plus="true"]) #urlbar *[open=true].mixedActiveContent #page-proxy-favicon[pageproxystate="valid"][src] {
-	  background: -moz-image-rect(url("chrome://classic_theme_restorer/content/images/identity-icons-https-mixed-active.png"),
-					0, 48, 16, 32) no-repeat center left !important;
-	}
-	#main-window:not([fx42plus="true"]) #urlbar:-moz-locale-dir(rtl) *[open=true].mixedActiveContent #page-proxy-favicon[pageproxystate="valid"][src] {
-	  background: -moz-image-rect(url("chrome://classic_theme_restorer/content/images/identity-icons-https-mixed-active.png"),
-					0, 48, 16, 32) no-repeat center right !important;
-	}
-	
-	#main-window:not([fx42plus="true"]) #urlbar .mixedDisplayContent #page-proxy-favicon[pageproxystate="valid"][src] {
-	  background: -moz-image-rect(url("chrome://classic_theme_restorer/content/images/identity-icons-https-mixed-display.png"),
-					0, 16, 16, 0) no-repeat center left !important;
-	}
-	#main-window:not([fx42plus="true"]) #urlbar:-moz-locale-dir(rtl) .mixedDisplayContent #page-proxy-favicon[pageproxystate="valid"][src] {
-	  background: -moz-image-rect(url("chrome://classic_theme_restorer/content/images/identity-icons-https-mixed-display.png"),
-					0, 16, 16, 0) no-repeat center right !important;
-	}
-
-	#main-window:not([fx42plus="true"]) #urlbar .mixedDisplayContent #page-proxy-favicon[pageproxystate="valid"][src]:hover {
-	  background: -moz-image-rect(url("chrome://classic_theme_restorer/content/images/identity-icons-https-mixed-display.png"),
-					0, 32, 16, 16) no-repeat center left !important;
-	}
-	#main-window:not([fx42plus="true"]) #urlbar:-moz-locale-dir(rtl) .mixedDisplayContent #page-proxy-favicon[pageproxystate="valid"][src]:hover {
-	  background: -moz-image-rect(url("chrome://classic_theme_restorer/content/images/identity-icons-https-mixed-display.png"),
-					0, 32, 16, 16) no-repeat center right !important;
-	}
-
-	#main-window:not([fx42plus="true"]) #urlbar .mixedDisplayContent #page-proxy-favicon[pageproxystate="valid"][src]:hover:active {
-	  background: -moz-image-rect(url("chrome://classic_theme_restorer/content/images/identity-icons-https-mixed-display.png"),
-					0, 48, 16, 32) no-repeat center left !important;
-	}
-	#main-window:not([fx42plus="true"]) #urlbar:-moz-locale-dir(rtl) .mixedDisplayContent #page-proxy-favicon[pageproxystate="valid"][src]:hover:active {
-	  background: -moz-image-rect(url("chrome://classic_theme_restorer/content/images/identity-icons-https-mixed-display.png"),
-					0, 48, 16, 32) no-repeat center right !important;
-	}
-
-	#main-window:not([fx42plus="true"]) #urlbar *[open=true].mixedDisplayContent #page-proxy-favicon[pageproxystate="valid"][src] {
-	  background: -moz-image-rect(url("chrome://classic_theme_restorer/content/images/identity-icons-https-mixed-display.png"),
-					0, 48, 16, 32) no-repeat center left !important;
-	}
-	#main-window:not([fx42plus="true"]) #urlbar:-moz-locale-dir(rtl) *[open=true].mixedDisplayContent #page-proxy-favicon[pageproxystate="valid"][src] {
-	  background: -moz-image-rect(url("chrome://classic_theme_restorer/content/images/identity-icons-https-mixed-display.png"),
-					0, 48, 16, 32) no-repeat center right !important;
-	}
-
-	#main-window:not([fx42plus="true"]) #urlbar .mixedDisplayContentLoadedActiveBlocked #page-proxy-favicon[pageproxystate="valid"][src] {
-	  background: -moz-image-rect(url("chrome://classic_theme_restorer/content/images/identity-icons-https-mixed-display.png"),
-					0, 16, 16, 0) no-repeat center left !important;
-	}
-	#main-window:not([fx42plus="true"]) #urlbar:-moz-locale-dir(rtl) .mixedDisplayContentLoadedActiveBlocked #page-proxy-favicon[pageproxystate="valid"][src] {
-	  background: -moz-image-rect(url("chrome://classic_theme_restorer/content/images/identity-icons-https-mixed-display.png"),
-					0, 16, 16, 0) no-repeat center right !important;
-	}
-
-	#main-window:not([fx42plus="true"]) #urlbar .mixedDisplayContentLoadedActiveBlocked #page-proxy-favicon[pageproxystate="valid"][src]:hover {
-	  background: -moz-image-rect(url("chrome://classic_theme_restorer/content/images/identity-icons-https-mixed-display.png"),
-					0, 32, 16, 16) no-repeat center left !important;
-	}
-	#main-window:not([fx42plus="true"]) #urlbar:-moz-locale-dir(rtl) .mixedDisplayContentLoadedActiveBlocked #page-proxy-favicon[pageproxystate="valid"][src]:hover {
-	  background: -moz-image-rect(url("chrome://classic_theme_restorer/content/images/identity-icons-https-mixed-display.png"),
-					0, 32, 16, 16) no-repeat center right !important;
-	}
-
-	#main-window:not([fx42plus="true"]) #urlbar .mixedDisplayContentLoadedActiveBlocked #page-proxy-favicon[pageproxystate="valid"][src]:hover:active {
-	  background: -moz-image-rect(url("chrome://classic_theme_restorer/content/images/identity-icons-https-mixed-display.png"),
-					0, 48, 16, 32) no-repeat center left !important;
-	}
-	#main-window:not([fx42plus="true"]) #urlbar:-moz-locale-dir(rtl) .mixedDisplayContentLoadedActiveBlocked #page-proxy-favicon[pageproxystate="valid"][src]:hover:active {
-	  background: -moz-image-rect(url("chrome://classic_theme_restorer/content/images/identity-icons-https-mixed-display.png"),
-					0, 48, 16, 32) no-repeat center right !important;
-	}
-
-	#main-window:not([fx42plus="true"]) #urlbar *[open=true].mixedDisplayContentLoadedActiveBlocked #page-proxy-favicon[pageproxystate="valid"][src] {
-	  background: -moz-image-rect(url("chrome://classic_theme_restorer/content/images/identity-icons-https-mixed-display.png"),
-					0, 48, 16, 32) no-repeat center left !important;
-	}
-	#main-window:not([fx42plus="true"]) #urlbar:-moz-locale-dir(rtl) *[open=true].mixedDisplayContentLoadedActiveBlocked #page-proxy-favicon[pageproxystate="valid"][src] {
-	  background: -moz-image-rect(url("chrome://classic_theme_restorer/content/images/identity-icons-https-mixed-display.png"),
-					0, 48, 16, 32) no-repeat center right !important;
-	}
 
 	#main-window[fx42plus="true"] #urlbar .chromeUI #page-proxy-favicon[pageproxystate="valid"][src],
 	#main-window[fx42plus="true"] #urlbar *[open=true].chromeUI #page-proxy-favicon[pageproxystate="valid"][src] {
@@ -172,47 +57,6 @@
 	  background: -moz-image-rect(url("chrome://branding/content/identity-icons-brand.svg"),
 					0, 32, 32, 0) no-repeat center right !important;
 	  background-size: 16px 16px !important;
-	}
-	
-	#main-window[fx42plus="true"] #urlbar .mixedActiveContent > #identity-icons > #page-proxy-favicon[pageproxystate="valid"][src],
-	#main-window[fx42plus="true"] #urlbar .mixedActiveContent > #page-proxy-favicon[pageproxystate="valid"][src] {
-	  background: -moz-image-rect(url("chrome://browser/skin/identity-mixed-active-loaded.svg"),
-					0, 16, 16, 0) no-repeat center left !important;
-	}
-	#main-window[fx42plus="true"] #urlbar:-moz-locale-dir(rtl) .mixedActiveContent > #identity-icons > #page-proxy-favicon[pageproxystate="valid"][src],
-	#main-window[fx42plus="true"] #urlbar:-moz-locale-dir(rtl) .mixedActiveContent > #page-proxy-favicon[pageproxystate="valid"][src] {
-	  background: -moz-image-rect(url("chrome://browser/skin/identity-mixed-active-loaded.svg"),
-					0, 16, 16, 0) no-repeat center right !important;
-	}
-
-	#main-window[fx42plus="true"] #urlbar .weakCipher > #identity-icons > #page-proxy-favicon[pageproxystate="valid"][src],
-	#main-window[fx42plus="true"] #urlbar .mixedDisplayContent > #identity-icons > #page-proxy-favicon[pageproxystate="valid"][src],
-	#main-window[fx42plus="true"] #urlbar .mixedDisplayContentLoadedActiveBlocked > #identity-icons > #page-proxy-favicon[pageproxystate="valid"][src],
-	#main-window[fx42plus="true"] #urlbar .weakCipher > #page-proxy-favicon[pageproxystate="valid"][src],
-	#main-window[fx42plus="true"] #urlbar .mixedDisplayContent > #page-proxy-favicon[pageproxystate="valid"][src],
-	#main-window[fx42plus="true"] #urlbar .mixedDisplayContentLoadedActiveBlocked > #page-proxy-favicon[pageproxystate="valid"][src] {
-	  background: -moz-image-rect(url("chrome://browser/skin/identity-mixed-passive-loaded.svg"),
-					0, 16, 16, 0) no-repeat center left !important;
-	}
-
-	#main-window[fx42plus="true"] #urlbar:-moz-locale-dir(rtl) .weakCipher > #identity-icons > #page-proxy-favicon[pageproxystate="valid"][src],
-	#main-window[fx42plus="true"] #urlbar:-moz-locale-dir(rtl) .mixedDisplayContent > #identity-icons > #page-proxy-favicon[pageproxystate="valid"][src],
-	#main-window[fx42plus="true"] #urlbar:-moz-locale-dir(rtl) .mixedDisplayContentLoadedActiveBlocked > #identity-icons > #page-proxy-favicon[pageproxystate="valid"][src],
-	#main-window[fx42plus="true"] #urlbar:-moz-locale-dir(rtl) .weakCipher > #page-proxy-favicon[pageproxystate="valid"][src],
-	#main-window[fx42plus="true"] #urlbar:-moz-locale-dir(rtl) .mixedDisplayContent > #page-proxy-favicon[pageproxystate="valid"][src],
-	#main-window[fx42plus="true"] #urlbar:-moz-locale-dir(rtl) .mixedDisplayContentLoadedActiveBlocked > #page-proxy-favicon[pageproxystate="valid"][src] {
-	  background: -moz-image-rect(url("chrome://browser/skin/identity-mixed-passive-loaded.svg"),
-					0, 16, 16, 0) no-repeat center right !important;
-	}
-	#main-window[fx42plus="true"] #urlbar .mixedActiveBlocked > #identity-icons > #page-proxy-favicon[pageproxystate="valid"][src],
-	#main-window[fx42plus="true"] #urlbar .mixedActiveBlocked > #page-proxy-favicon[pageproxystate="valid"] {
-	  background: -moz-image-rect(url("chrome://browser/skin/identity-mixed-active-blocked.svg"),
-					0, 16, 16, 0) no-repeat center left !important;
-	}
-	#main-window[fx42plus="true"] #urlbar:-moz-locale-dir(rtl) .mixedActiveBlocked > #identity-icons > #page-proxy-favicon[pageproxystate="valid"][src],
-	#main-window[fx42plus="true"] #urlbar:-moz-locale-dir(rtl) .mixedActiveBlocked > #page-proxy-favicon[pageproxystate="valid"][src] {
-	  background: -moz-image-rect(url("chrome://browser/skin/identity-mixed-active-blocked.svg"),
-					0, 16, 16, 0) no-repeat center right !important;
 	}
 
 }
