--- a/xpi/content/css/padlock2_modern.css
+++ b/xpi/content/css/padlock2_modern.css
@@ -6,5 +6,23 @@
 	  list-style-image: url(chrome://classic_theme_restorer/content/images/padlock_modern.png) !important;
 	  -moz-image-region: rect(0, 16px, 16px, 0) !important;
 	}
+	
+	#main-window[fx42plus="true"] #urlbar .insecureLoginForms #page-proxy-favicon[pageproxystate="valid"],
+	#main-window[fx42plus="true"] #urlbar .mixedActiveContent  #page-proxy-favicon[pageproxystate="valid"] {
+	  list-style-image: url(chrome://classic_theme_restorer/content/images/padlock_modern_mal.png) !important;
+	  -moz-image-region: rect(0, 16px, 16px, 0) !important;
+	}
+
+	#main-window[fx42plus="true"] #urlbar .weakCipher #page-proxy-favicon[pageproxystate="valid"],
+	#main-window[fx42plus="true"] #urlbar .mixedDisplayContent #page-proxy-favicon[pageproxystate="valid"],
+	#main-window[fx42plus="true"] #urlbar .mixedDisplayContentLoadedActiveBlocked #page-proxy-favicon[pageproxystate="valid"] {
+	  list-style-image: url(chrome://classic_theme_restorer/content/images/padlock_modern_mpl.png) !important;
+	  -moz-image-region: rect(0, 16px, 16px, 0) !important;
+	}
+	
+	#main-window[fx42plus="true"] #urlbar .mixedActiveBlocked > #identity-icons > #page-proxy-favicon[pageproxystate="valid"] {
+	  list-style-image: url(chrome://classic_theme_restorer/content/images/padlock_modern_mab.png) !important;
+	  -moz-image-region: rect(0, 16px, 16px, 0) !important;
+	}
 
 }
