--- a/xpi/content/css/padlock_default.css
+++ b/xpi/content/css/padlock_default.css
@@ -257,6 +257,17 @@
 	  background: -moz-image-rect(url("chrome://browser/skin/identity-mixed-active-blocked.svg"),
 					0, 16, 16, 0) no-repeat center right !important;
 	}
-
+	
+	#main-window[fx42plus="true"] #urlbar .insecureLoginForms > #identity-icons > #page-proxy-favicon[pageproxystate="valid"],
+	#main-window[fx42plus="true"] #urlbar .mixedActiveContent > #identity-icons > #page-proxy-favicon[pageproxystate="valid"] {
+	  background: -moz-image-rect(url("chrome://browser/skin/identity-mixed-active-loaded.svg"),
+					0, 16, 16, 0) no-repeat center left !important;
+	}
+	
+	#main-window[fx42plus="true"] #urlbar:-moz-locale-dir(rtl) .insecureLoginForms > #identity-icons > #page-proxy-favicon[pageproxystate="valid"],
+	#main-window[fx42plus="true"] #urlbar:-moz-locale-dir(rtl) .mixedActiveContent > #identity-icons > #page-proxy-favicon[pageproxystate="valid"] {
+	  background: -moz-image-rect(url("chrome://browser/skin/identity-mixed-active-loaded.svg"),
+					0, 16, 16, 0) no-repeat center right !important;
+	}
 
 }
