--- a/xpi/content/css/win8/tabsontop_offextra.css
+++ b/xpi/content/css/win8/tabsontop_offextra.css
@@ -59,6 +59,10 @@
 	  #main-window[defaultfxtheme="true"][fx32plus="true"][tabsontop="false"] #TabsToolbar:-moz-lwtheme {
 		border-bottom: 0 !important;
 	  }
+	  
+	  #main-window[defaultfxtheme="true"] #TabsToolbar:not(:-moz-lwtheme){
+		background: #f6f6f6 !important;
+	  }
 	}
 	
 	/* for LavaFox themes */
