--- a/xpi/content/css/alt_optionswindow.css
+++ b/xpi/content/css/alt_optionswindow.css
@@ -59,4 +59,8 @@
 	  margin-bottom: 0 !important;
 	}
 	
+	#categories + vbox > #mainPrefPane + hbox {
+	  margin-bottom: -20px !important;
+	}
+	
 }
