--- a/xpi/content/css/alt_optionspage.css
+++ b/xpi/content/css/alt_optionspage.css
@@ -1,3 +1,4 @@
+@import url(chrome://ctraddon_os_special/skin/alt_optionspageextra.css);
 @-moz-document url(about:preferences),url-prefix(about:preferences){
 
  	page,
@@ -93,6 +94,7 @@
 	
 	textbox {
 	  min-height: 24px !important;
+	  height: 24px !important;
 	}
 
 	description,
@@ -214,6 +216,7 @@
 
 *[subdialog="true"] textbox {
   min-height: 24px !important;
+  height: 24px !important;
 }
 
 *[subdialog="true"] treecols,
