--- a/xpi/content/css/alt_optionswindow.css
+++ b/xpi/content/css/alt_optionswindow.css
@@ -63,4 +63,9 @@
 	  margin-bottom: -20px !important;
 	}
 	
+	#dialogBox {
+	  min-width: unset !important;
+	  min-height: unset !important;
+	}
+	
 }
