--- a/xpi/content/css/padlock2_modern.css
+++ b/xpi/content/css/padlock2_modern.css
@@ -24,5 +24,30 @@
 	  list-style-image: url(chrome://classic_theme_restorer/content/images/padlock_modern_mab.png) !important;
 	  -moz-image-region: rect(0, 16px, 16px, 0) !important;
 	}
+	
+	/* Firefox 45+ */
+	#main-window[fx45plus="true"] #urlbar[pageproxystate="valid"] .verifiedDomain #connection-icon,
+	#main-window[fx45plus="true"] #urlbar[pageproxystate="valid"] .verifiedIdentity #connection-icon {
+	  list-style-image: url(chrome://classic_theme_restorer/content/images/padlock_modern.png) !important;
+	  -moz-image-region: rect(0, 16px, 16px, 0) !important;
+	}
+	
+	#main-window[fx45plus="true"] #urlbar[pageproxystate="valid"] .insecureLoginForms #connection-icon,
+	#main-window[fx45plus="true"] #urlbar[pageproxystate="valid"] .mixedActiveContent #connection-icon {
+	  list-style-image: url(chrome://classic_theme_restorer/content/images/padlock_modern_mal.png) !important;
+	  -moz-image-region: rect(0, 16px, 16px, 0) !important;
+	}
+
+	#main-window[fx45plus="true"] #urlbar[pageproxystate="valid"] .weakCipher #connection-icon,
+	#main-window[fx45plus="true"] #urlbar[pageproxystate="valid"] .mixedDisplayContent #connection-icon,
+	#main-window[fx45plus="true"] #urlbar[pageproxystate="valid"] .mixedDisplayContentLoadedActiveBlocked #connection-icon {
+	  list-style-image: url(chrome://classic_theme_restorer/content/images/padlock_modern_mpl.png) !important;
+	  -moz-image-region: rect(0, 16px, 16px, 0) !important;
+	}
+	
+	#main-window[fx45plus="true"] #urlbar[pageproxystate="valid"] .mixedActiveBlocked #connection-icon {
+	  list-style-image: url(chrome://classic_theme_restorer/content/images/padlock_modern_mab.png) !important;
+	  -moz-image-region: rect(0, 16px, 16px, 0) !important;
+	}
 
 }
