--- a/xpi/content/css/padlock_classic.css
+++ b/xpi/content/css/padlock_classic.css
@@ -9,7 +9,7 @@
 	#main-window[fx42plus="true"] #identity-popup.mixedDisplayContent,
 	#main-window[fx42plus="true"] #identity-popup.mixedDisplayContentLoadedActiveBlocked,
 	#main-window[fx42plus="true"] #identity-popup.mixedActiveBlocked {
-	  -moz-margin-start:-30px !important;
+	  -moz-margin-start: -30px !important;
 	}
 
 	/* provides the padlock icon for secure connections */
@@ -63,6 +63,31 @@
 	
 	#main-window[fx42plus="true"] #urlbar:-moz-locale-dir(rtl) .mixedActiveBlocked > #identity-icons > #page-proxy-favicon[pageproxystate="valid"] {
 	  background: url("chrome://classic_theme_restorer/content/images/padlock_classic_mab.png") no-repeat center right !important;
+	}
+	
+	/* Firefox 45+ */
+	#main-window[fx45plus="true"] #urlbar[pageproxystate="valid"] .verifiedDomain #connection-icon,
+	#main-window[fx45plus="true"] #urlbar[pageproxystate="valid"] .verifiedIdentity #connection-icon {
+	  list-style-image: url(chrome://classic_theme_restorer/content/images/padlock_classic.png) !important;
+	  -moz-image-region: rect(0, 16px, 16px, 0) !important;
+	}
+	
+	#main-window[fx45plus="true"] #urlbar[pageproxystate="valid"] .insecureLoginForms #connection-icon,
+	#main-window[fx45plus="true"] #urlbar[pageproxystate="valid"] .mixedActiveContent #connection-icon {
+	  list-style-image: url(chrome://classic_theme_restorer/content/images/padlock_classic_mal.png) !important;
+	  -moz-image-region: rect(0, 16px, 16px, 0) !important;
+	}
+
+	#main-window[fx45plus="true"] #urlbar[pageproxystate="valid"] .weakCipher #connection-icon,
+	#main-window[fx45plus="true"] #urlbar[pageproxystate="valid"] .mixedDisplayContent #connection-icon,
+	#main-window[fx45plus="true"] #urlbar[pageproxystate="valid"] .mixedDisplayContentLoadedActiveBlocked #connection-icon {
+	  list-style-image: url(chrome://classic_theme_restorer/content/images/padlock_classic_mpl.png) !important;
+	  -moz-image-region: rect(0, 16px, 16px, 0) !important;
+	}
+	
+	#main-window[fx45plus="true"] #urlbar[pageproxystate="valid"] .mixedActiveBlocked #connection-icon {
+	  list-style-image: url(chrome://classic_theme_restorer/content/images/padlock_classic_mab.png) !important;
+	  -moz-image-region: rect(0, 16px, 16px, 0) !important;
 	}
 
 }
